@@ -3,4 +3,9 @@ $Id$
 Prime Developers:
 Edwin Velds           <e.velds@gmail.com>
 
+Additional Development:
+Wouter Vermaelen      <wouter.vermaelen@scarlet.be>
+Albert Beevendorp
 
+Build System:
+Maarten ter Huurne    <maarten@treewalker.org>
