@@ -1,0 +1,9 @@
+# $Id$
+
+include build/node-start.mk
+
+DIST:= \
+	*.png
+
+include build/node-end.mk
+
