@@ -1,0 +1,12 @@
+# $Id$
+
+include build/node-start.mk
+
+SUBDIRS:=\
+	icons
+
+DIST:= \
+	resources.qrc
+
+include build/node-end.mk
+
